--- a/src/stylesheets/helpers/_helpers.scss
+++ b/src/stylesheets/helpers/_helpers.scss
@@ -1,9 +1,10 @@
-@import 'hacks/hacks';
-@import 'hacks/print';
-
 ////
 /// @group helpers
 ////
+
+@import 'hacks/hacks';
+@import 'hacks/print';
+@import 'helpers-glyphs';
 
 /// Return ems from a pixel value
 /// This assumes a base of `$base-font-size`
