--- a/src/stylesheets/typography/_typography-settings.scss
+++ b/src/stylesheets/typography/_typography-settings.scss
@@ -13,7 +13,7 @@ $font-families: (
 	mono: 'Monaco, Menlo, Consolas, "Courier New", monospace'
 );
 
-/// Base font size
+/// Base font size, in pixels
 $base-font-size: 16;
 
 /// Cap height
