--- a/src/stylesheets/components/_components-phase.scss
+++ b/src/stylesheets/components/_components-phase.scss
@@ -7,7 +7,7 @@
 .phase-banner {
 	border-bottom: 1px solid get-colour(grey);
 	display: table;
-	margin: 0;
+	margin: 0 0 em(24);
 	padding: em(4) 0;
 	width: 100%;
 
