--- a/src/stylesheets/typography/_typography-global.scss
+++ b/src/stylesheets/typography/_typography-global.scss
@@ -48,7 +48,8 @@ a {
 	}
 }
 
-p, .p {
+p,
+.p {
 	@include nice-font($scale: 0, $line-height: 1.6);
 	font-feature-settings: 'kern', 'onum', 'liga';
 
