--- a/src/stylesheets/typography/_typography-lists.scss
+++ b/src/stylesheets/typography/_typography-lists.scss
@@ -25,7 +25,7 @@ ol {
 
 			&:before {
 				color: get-colour(orange);
-				content: '\2022';
+				content: get-glyph(bullet);
 				font-size: 150%;
 				left: -1.5rem;
 				position: absolute;
