--- a/src/stylesheets/components/_components-panel.scss
+++ b/src/stylesheets/components/_components-panel.scss
@@ -2,6 +2,8 @@
 /// @group components
 ////
 
+/// A panel is a container for visually separating content.
+/// Often used within a sidebar.
 .panel {
 	background: get-colour(grey, light);
 	padding: 1em;
