--- a/src/stylesheets/settings/_settings-colours.scss
+++ b/src/stylesheets/settings/_settings-colours.scss
@@ -126,12 +126,12 @@ $palette-orange: (
 /// Red palette
 /// @prop {Color} base [$colour-base-red] Base red
 $palette-red: (
-	x-light: #ffaaaa,
+	x-light: #faa,
 	light: #ff8080,
 	mid-light: #f55,
 	base: $colour-base-red,
 	mid-dark: #d40000,
-	dark: #aa0000,
+	dark: #a00,
 	x-dark: #800000
 );
 
