--- a/web/server/views/sass/index.njk
+++ b/web/server/views/sass/index.njk
@@ -5,7 +5,7 @@
 
 	<h1>SASS</h1>
 
-	<nav role="nav">
+	<nav role="navigation">
 		<ul>
 			<li><a href="#syntax">Syntax/formatting</a></li>
 			<li><a href="#naming">Naming</a></li>
