--- a/web/server/views/components/navigation.njk
+++ b/web/server/views/components/navigation.njk
@@ -17,7 +17,7 @@
 		<h2>Basic</h2>
 
 		{% example -%}
-		<nav class="nav" role="nav">
+		<nav class="nav" role="navigation">
 			<ul class="nav__tabs">
 				<li class="active"><a>One</a></li>
 				<li><a>Two</a></li>
@@ -29,7 +29,7 @@
 		<h3>Justified</h3>
 
 		{% example -%}
-		<nav class="nav" role="nav">
+		<nav class="nav" role="navigation">
 			<ul class="nav__tabs nav__tabs--justified">
 				<li class="active"><a>One</a></li>
 				<li><a>Two</a></li>
@@ -44,7 +44,7 @@
 		<h2>Pills</h2>
 
 		{% example -%}
-		<nav class="nav" role="nav">
+		<nav class="nav" role="navigation">
 			<ul class="nav__pills">
 				<li class="active"><a>One</a></li>
 				<li><a>Two</a></li>
@@ -56,7 +56,7 @@
 		<h3>Justified</h3>
 
 		{% example -%}
-		<nav class="nav" role="nav">
+		<nav class="nav" role="navigation">
 			<ul class="nav__pills nav__pills--justified">
 				<li class="active"><a>One</a></li>
 				<li><a>Two</a></li>
@@ -71,7 +71,7 @@
 		<h2>Navbar</h2>
 
 		{% example -%}
-			<nav class="navbar" role="nav">
+			<nav class="navbar" role="navigation">
 				<div class="navbar__inner">
 					<a class="navbar__brand"></a>
 					<ul class="navbar__nav">
