--- a/web/client/stylesheets/main.scss
+++ b/web/client/stylesheets/main.scss
@@ -8,5 +8,6 @@
 @import 'components/swatch';
 @import 'components/navbar';
 @import 'components/phase';
+@import 'components/grid-example';
 
 // Other
