--- a/web/server/views/layouts/_layout.njk
+++ b/web/server/views/layouts/_layout.njk
@@ -96,7 +96,7 @@
 		{% endblock %}
 	</div>
 
-	<footer class="footer">
+	<footer class="footer" role="contentinfo">
 		<nav>
 			<ul>
 				<li><a href="">NICE Experience</a></li>
