--- a/src/stylesheets/components/_components-panel.scss
+++ b/src/stylesheets/components/_components-panel.scss
@@ -5,11 +5,11 @@
 /// A panel is a container for visually separating content.
 /// Often used within a sidebar.
 .panel {
-	background: get-colour(grey, light);
+	background: get-colour(grey, x-light);
 	padding: 1em;
 
 	&--dark {
-		background: get-colour(grey, dark);
+		background: get-colour(grey, mid-dark);
 		color: $white;
 	}
 }
