--- a/web/server/views/style-guide/layout.njk
+++ b/web/server/views/style-guide/layout.njk
@@ -8,7 +8,8 @@
 	<nav>
 		<ul>
 			<li><a href="#containers">Containers</a></li>
-			<li><a href="#grid">Grid</a></li>
+			<li><a href="#grid">Basic grid</a></li>
+			<li><a href="#nested">Nested grids</a></li>
 		</ul>
 	</nav>
 
@@ -70,6 +71,20 @@
 			<div class="grid__item one-fifth">1/5</div>
 			<div class="grid__item two-fifths">2/5</div>
 		</div>
+
+	</section>
+
+	<section id="nested">
+		<h2>Nested grids</h2>
+
+		Nested
+
+	</section>
+
+	<section id="responsive">
+		<h2>Responsive grids</h2>
+
+		Responsive
 
 	</section>
 
