--- a/web/client/stylesheets/components/_grid-example.scss
+++ b/web/client/stylesheets/components/_grid-example.scss
@@ -4,7 +4,7 @@
 
 		.grid__item {
 			background: get-colour(grey, light);
-			border: 5px solid get-colour(grey, dark);
+			border: 5px solid get-colour(grey);
 			padding-top: 1em;
 			padding-bottom: 1em;
 		}
