--- a/src/stylesheets/settings/_settings-colours.scss
+++ b/src/stylesheets/settings/_settings-colours.scss
@@ -209,7 +209,7 @@ $body-text-colour: get-colour(grey, mid-dark);
 // $discovery-colour: $fuschia;			// Discovery badges and banners
 $alpha-colour: get-colour(pink);				// Alpha badges and banners
 $beta-colour: get-colour(orange);				// Beta badges and banners
-// $live-colour: $grass-green;			// Live badges and banners
+$live-colour: get-colour(green);			// Live badges and banners
 // $banner-text-colour: #000;			// Text colour for Alpha & Beta banners
 $error-colour: get-colour(red);					// Error text and border colour
 $error-background-colour: get-colour(red, x-light);			// Error background colour
