Add more semantic colour names

--- a/src/stylesheets/components/_components-breadcrumbs.scss
+++ b/src/stylesheets/components/_components-breadcrumbs.scss
@@ -21,11 +21,11 @@
 		}
 
 		&--active {
-			color: $body-text-colour;
+			color: $text-colour;
 		}
 
 		a {
-			color: $body-text-colour;
+			color: $text-colour;
 		}
 	}
 }
