--- a/web/server/views/index.njk
+++ b/web/server/views/index.njk
@@ -3,7 +3,7 @@
 
 {% macro item(title, href, description) %}
 	<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
-		<h5>{{ title }}</h5>
+		<h4 class="h6">{{ title }}</h4>
 		<p>
 			{{ description }}
 		</p>
