--- a/src/stylesheets/settings/_settings-colours.scss
+++ b/src/stylesheets/settings/_settings-colours.scss
@@ -192,28 +192,25 @@ $palettes: (
 
 
 // Semantic colour names
-$link-colour: get-colour(blue, light);
-$link-hover-colour: get-colour(blue, x-light);
+$page-colour: $white;									// The page bg
+// LINKS
+$link-colour: get-colour(blue, light);					// Default link
+$link-hover-colour: get-colour(blue, x-light);			// Link hover
 // $link-active-colour: $light-blue;
-$link-visited-colour: get-colour(purple);
-// $button-colour: #00823b;
-$focus-colour: get-colour(orange);
-// $text-colour: $black;				// Standard text colour
-// $secondary-text-colour: $grey-1;		// Section headers, help text etc.
-// $border-colour: $grey-2;				// Borders, seperators, rules, keylines etc.
-// $panel-colour: $grey-3;				// Related links panel, page footer etc.
-// $canvas-colour: $grey-4;				// Page background
-// $highlight-colour: $grey-4;			// Table stripes etc.
-$page-colour: $white;				// The page
-$body-text-colour: get-colour(grey, mid-dark);
-// $discovery-colour: $fuschia;			// Discovery badges and banners
-$alpha-colour: get-colour(pink);				// Alpha badges and banners
-$beta-colour: get-colour(orange);				// Beta badges and banners
-$live-colour: get-colour(green);			// Live badges and banners
-// $banner-text-colour: #000;			// Text colour for Alpha & Beta banners
-$error-colour: get-colour(red);					// Error text and border colour
-$error-background-colour: get-colour(red, x-light);			// Error background colour
-
-// Sub-brands
-/// BNF Purple
+$link-visited-colour: get-colour(purple);				// Link visited
+// TEXT
+$focus-colour: get-colour(orange);						// Focus colour
+$text-colour: get-colour(grey, mid-dark);				// Standard text colour
+// $secondary-text-colour: $grey-1;						// Section headers, help text etc.
+$border-colour: get-colour(grey, light);				// Borders, seperators, rules, keylines etc.
+// $panel-colour: $grey-3;								// Related links panel, page footer etc.
+// $highlight-colour: $grey-4;							// Table stripes etc.
+// PHASES
+$alpha-colour: get-colour(pink);						// Alpha badges and banners
+$beta-colour: get-colour(orange);						// Beta badges and banners
+$live-colour: get-colour(green);						// Live badges and banners
+// ALERTS
+$error-colour: get-colour(red);							// Error text and border colour
+$error-background-colour: get-colour(red, x-light);		// Error background colour
+// SUB-BRANDS
 $bnf-purple: $colour-base-purple;
