--- a/src/stylesheets/typography/_typography-global.scss
+++ b/src/stylesheets/typography/_typography-global.scss
@@ -16,7 +16,7 @@ html {
 
 body {
 	background: $page-colour;
-	color: $body-text-colour;
+	color: $text-colour;
 	font-family: font-family(sans);
 	font-style: normal;
 	line-height: 1.6rem;
