--- a/web/server/views/index.njk
+++ b/web/server/views/index.njk
@@ -58,7 +58,7 @@
 
 		<h3 class="heading heading--separator">SASS</h3>
 
-		<p>We use SASS as our CSS pre-processor</p>
+		<p>We use <a href="http://sass-lang.com/" target="_blank" rel="external">SASS</a> as our <a href="https://github.com/showcases/css-preprocessors" target="_blank" rel="external">CSS pre-processor</a> as it's mature, got a great feature set and <a href="https://github.com/sass/libsass" target="_blank" rel="external">libsass</a> is super quick.</p>
 
 		<div class="grid">
 
