Style external links

--- a/src/stylesheets/helpers/_helpers-glyphs.scss
+++ b/src/stylesheets/helpers/_helpers-glyphs.scss
@@ -19,7 +19,8 @@ $glyphs: (
 	greater-than: '003e',
 	less-than: '003c',
 	copyright: '00a9',
-	left-double-quotation-mark: '201C'
+	left-double-quotation-mark: '201C',
+	ne-arrow: '021D7'
 	// Add more entity codes here as and when they're needed
 );
 
