--- a/src/stylesheets/components/_components-navbar.scss
+++ b/src/stylesheets/components/_components-navbar.scss
@@ -7,7 +7,7 @@
 	background-color: get-colour(grey, x-light);
 
 	&__inner {
-		@extend .container;
+		@extend %container;
 		overflow: hidden;
 	}
 
