--- a/web/server/views/index.njk
+++ b/web/server/views/index.njk
@@ -22,6 +22,10 @@
 			<a href="/about/">Read more about NICE Experience</a>
 		</h2>
 
+		<a class="btn github-button" target="_blank" rel="external" data-style="mega"
+			href="https://github.com/nhsevidence/NICE.Bootstrap2">NICE Bootstrap 2 on GitHub</a>
+		<script async defer src="https://buttons.github.io/buttons.js"></script>
+
 		<h3 class="heading heading--separator">Style Guide</h3>
 
 		<p>The foundations and patterns that are to be used for faster product development.</p>
