--- a/src/stylesheets/components/_components-global.scss
+++ b/src/stylesheets/components/_components-global.scss
@@ -2,10 +2,14 @@
 /// @group components
 ////
 
-.container {
+%container {
 	margin: auto;
 	max-width: 1170px;
 	width: 96%;
+}
+
+.container {
+	@extend %container;
 }
 
 img {
