Add installation page

--- a/web/server/views/about/index.njk
+++ b/web/server/views/about/index.njk
@@ -1,4 +1,4 @@
-{% extends "../layouts/_sidebar.njk" %}
+{% extends "./_about-layout.njk" %}
 {% set title = "About" %}
 {% set breadcrumbs = [{ title: title }] %}
 
@@ -98,7 +98,7 @@
 					Either quickly rapidly prototype using a compiled version, or integrate it into your app and use it as a solid base.
 				</p>
 				<p>
-					<a class="btn" href="/todo">Start developing</a>
+					<a class="btn" href="/about/installation">Install</a>
 				</p>
 			</div>
 
