--- a/web/server/views/index.njk
+++ b/web/server/views/index.njk
@@ -22,9 +22,10 @@
 			<a href="/about/">Read more about NICE Experience</a>
 		</h2>
 
-		<a class="btn github-button" target="_blank" rel="external" data-style="mega"
-			href="https://github.com/nhsevidence/NICE.Bootstrap2">NICE Bootstrap 2 on GitHub</a>
-		<script async defer src="https://buttons.github.io/buttons.js"></script>
+		<p>
+			<a class="btn btn--primary" href="/about/installation">Install</a>
+			<a class="btn btn--secondary" target="_blank" rel="external" href="https://github.com/nhsevidence/NICE.Bootstrap2">View on GitHub</a>
+		</p>
 
 		<h3 class="heading heading--separator">Style Guide</h3>
 
