--- a/web/server/views/style-guide/layout.njk
+++ b/web/server/views/style-guide/layout.njk
@@ -5,13 +5,14 @@
 
 	<h1>Grid &amp; layout</h1>
 
-	<nav>
+	<nav role="navigation">
 		<ul>
 			<li><a href="#containers">Containers</a></li>
-			<li><a href="#grid">Basic grid</a></li>
+			<li><a href="#basics">Basic grid</a></li>
 			<li><a href="#nested">Nested grids</a></li>
 			<li><a href="#nested">Responsive grids</a></li>
 			<li><a href="#nested">Semantic classes</a></li>
+			<li><a href="#features">Other grid features</a></li>
 		</ul>
 	</nav>
 
@@ -26,7 +27,7 @@
 			<li>Not designed to be nested</li>
 		</ul>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="container">
 				<p>Some content e.g. a grid goes here</p>
 			</div>
@@ -34,16 +35,16 @@
 
 	</section>
 
-	<section id="grid">
-		<h2>Grid</h2>
+	<section id="basics">
+		<h2>Basic grid</h2>
 
 		<ul>
-			<li>We use <a href="http://csswizardry.com/csswizardry-grids/" target="_blank" rel="external">csswizardry-grids</a> with some different settings</li>
+			<li>We use <a href="http://csswizardry.com/csswizardry-grids/" target="_blank" rel="external">csswizardry-grids</a> with some different breakpoints (see <a href="#responsive">responsive section</a> below)</li>
 		</ul>
 
 		<h3>Whole</h3>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="grid">
 				<div class="grid__item one-whole"><div class="grid-example-item">1 whole</div></div>
 			</div>
@@ -51,7 +52,7 @@
 
 		<h3>Halves</h3>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="grid">
 				<div class="grid__item one-half"><div class="grid-example-item">1/2</div></div>
 				<div class="grid__item one-half"><div class="grid-example-item">1/2</div></div>
@@ -60,7 +61,7 @@
 
 		<h3>Thirds</h3>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="grid">
 				<div class="grid__item one-third"><div class="grid-example-item">1/3</div></div>
 				<div class="grid__item two-thirds"><div class="grid-example-item">2/3</div></div>
@@ -69,7 +70,7 @@
 
 		<h3>Quarters</h3>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="grid">
 				<div class="grid__item one-quarter"><div class="grid-example-item">1/4</div></div>
 				<div class="grid__item one-quarter"><div class="grid-example-item">1/4</div></div>
@@ -87,7 +88,7 @@
 
 		<h3>Fifths</h3>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="grid">
 				<div class="grid__item one-fifth"><div class="grid-example-item">1/5</div></div>
 				<div class="grid__item two-fifths"><div class="grid-example-item">2/5</div></div>
@@ -103,7 +104,7 @@
 
 		<h3>Sixths</h3>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="grid">
 				<div class="grid__item one-sixth"><div class="grid-example-item">1/6</div></div>
 				<div class="grid__item two-sixths"><div class="grid-example-item">2/6</div></div>
@@ -119,7 +120,7 @@
 
 		<h3>Eighths</h3>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="grid">
 				<div class="grid__item one-eighth"><div class="grid-example-item">1/8</div></div>
 				<div class="grid__item two-eighths"><div class="grid-example-item">2/8</div></div>
@@ -144,7 +145,7 @@
 
 		<h3>Tenths</h3>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="grid">
 				<div class="grid__item one-tenth"><div class="grid-example-item">1/10</div></div>
 				<div class="grid__item two-tenths"><div class="grid-example-item">2/10</div></div>
@@ -170,7 +171,7 @@
 
 		<h3>Twelfths</h3>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="grid">
 				<div class="grid__item one-twelfth"><div class="grid-example-item">1/12</div></div>
 				<div class="grid__item two-twelfths"><div class="grid-example-item">2/12</div></div>
@@ -207,7 +208,7 @@
 			<li>Grids can be nested infinitely</li>
 		</ul>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="grid">
 				<div class="grid__item one-half">
 					<div class="grid-example-item">
@@ -248,7 +249,7 @@
 			<li>Use <code>palm--</code>, <code>tablet--</code>, <code>desktop--</code> and <code>wide--</code> modifiers</li>
 		</ul>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="grid">
 				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter wide--one-fifth">
 					<div class="grid-example-item"></div>
@@ -264,6 +265,67 @@
 				</div>
 				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter wide--one-fifth">
 					<div class="grid-example-item"></div>
+				</div>
+			</div>
+		{%- endexample %}
+
+	</section>
+
+	<section id="features">
+		<h2>Other grid features</h2>
+
+		<ul>
+			<li>Other grid features from Wizardry are also available</li>
+			<li>Includes <code>.grid--rev</code>, <code>.grid--full</code>, <code>.grid--right</code>, <code>.grid--center</code>, <code>.grid--middle</code>, <code>.grid--bottom</code>, <code>.grid--narrow</code> and <code>.grid--wide</code></li>
+		</ul>
+
+		<h3>Reversed</h3>
+
+		<p>The <code>.grid--rev</code> modifier renders the grid it in the opposite order to the source order</p>
+
+		{% example "html" -%}
+			<div class="grid grid--rev">
+				<div class="grid__item one-half">
+					<div class="grid-example-item">first in the source</div>
+				</div>
+				<div class="grid__item one-half">
+					<div class="grid-example-item">second in the source</div>
+				</div>
+			</div>
+		{%- endexample %}
+
+		<h3>Full (gutterlesss)</h3>
+
+		<p>Remove the gutter between grid items with the <code>.grid--full</code> modifier</p>
+
+		{% example "html" -%}
+			<div class="grid grid--full">
+				<div class="grid__item one-quarter">
+					<div class="grid-example-item">full</div>
+				</div>
+				<div class="grid__item one-quarter">
+					<div class="grid-example-item">full</div>
+				</div>
+				<div class="grid__item one-quarter">
+					<div class="grid-example-item">full</div>
+				</div>
+				<div class="grid__item one-quarter">
+					<div class="grid-example-item">full</div>
+				</div>
+			</div>
+		{%- endexample %}
+
+		<h3>Centered</h3>
+
+		<p>Centrally aligned grids with the <code>.grid--center</code> modifier</p>
+
+		{% example "html" -%}
+			<div class="grid grid--center">
+				<div class="grid__item one-quarter">
+					<div class="grid-example-item">centered</div>
+				</div>
+				<div class="grid__item one-quarter">
+					<div class="grid-example-item">centered</div>
 				</div>
 			</div>
 		{%- endexample %}
