--- a/web/server/views/about/index.njk
+++ b/web/server/views/about/index.njk
@@ -35,6 +35,10 @@
 			 It is a re-work of NICE's original adaptation of Bootstrap, known as <a href="https://github.com/nhsevidence/NICE.Bootstrap" target="_blank" rel="external">NICE.Bootstrap</a>. This was
 		</p>
 
+		<p>
+			<a href="/about/roadmap" class="btn btn--primary">View the roadmap</a>
+		</p>
+
 		<h2>Our aims and principles</h2>
 
 		<ul class="grid">
