SASS content + convert tabs to spaces for SASS

--- a/web/server/views/about/index.njk
+++ b/web/server/views/about/index.njk
@@ -1,4 +1,4 @@
-{% extends "./_about-layout.njk" %}
+{% extends "../layouts/_layout.njk" %}
 {% set title = "About" %}
 {% set breadcrumbs = [{ title: title }] %}
 
