--- a/web/server/views/components/_components-layout.njk
+++ b/web/server/views/components/_components-layout.njk
@@ -1,3 +1,3 @@
 {% extends "../layouts/_sidebar.njk" %}
-{% set breadcrumbs = [{ title: "Components", href: "/components/" }, { title: title }] %}
-{% set title = title + " | Components" %}
+{% set breadcrumbs = [{ title: "UI Components", href: "/components/" }, { title: title }] %}
+{% set title = title + " | UI Components" %}
