--- a/web/server/views/components/index.njk
+++ b/web/server/views/components/index.njk
@@ -1,5 +1,5 @@
-{% extends "../layouts/_sidebar.njk" %}
-{% set title = "Components" %}
+{% extends "../layouts/_layout.njk" %}
+{% set title = "UI Components" %}
 {% set breadcrumbs = [{ title: title }] %}
 
 {% macro item(title, href, description) %}
@@ -14,10 +14,10 @@
 {% block body %}
 
 	<div class="container">
-		<h1>NICE Components</h1>
+		<h1>UI Components</h1>
 
 		<p class="lede">
-			This guide shows how to make your service look consistent with the rest of NICE.
+			Further reusable design patterns for creating NICE digital services
 		</p>
 
 		<div class="grid">
