--- a/web/server/views/sass/_sass-layout.njk
+++ b/web/server/views/sass/_sass-layout.njk
@@ -4,9 +4,10 @@
 
 {% block sidebar %}
 
-	<nav>
+	<nav role="navigation">
 		<ul>
 			<li><a href="/sass/">SASS</a></li>
+			<li><a href="/sass/code-standards">Code standards</a></li>
 			<li><a href="/sass/docs">Documentation</a></li>
 		</ul>
 	</nav>
