--- a/web/server/views/style-guide/index.njk
+++ b/web/server/views/style-guide/index.njk
@@ -1,4 +1,4 @@
-{% extends "../layouts/_sidebar.njk" %}
+{% extends "../layouts/_layout.njk" %}
 {% set title = "Style Guide" %}
 {% set breadcrumbs = [{ title: title }] %}
 
